SwipeDelegate: vertically resize contentItem when swipe is complete

Otherwise the delegate's text doesn't change with height animations.

Task-number: QTBUG-54780
Change-Id: I4e253b807e4765732a80100fca102b6650527948
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>